# pedsense-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_BRIEF.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
docs/: changelog.md  index.md
docs/api/: config.md  demo-module.md  index.md  processing.md  training.md
docs/cli/: attributes.md  convert-sequences.md  demo.md  index.md  preprocess.md  resume.md  setup.md  train.md
docs/dataset/: index.md  pose-format.md  preprocessing.md  raw-format.md  resnet-format.md  yolo-format.md
docs/getting-started/: installation.md  pretrained-models.md  quickstart.md
docs/models/: hybrid.md  index.md  resnet-lstm.md  yolo.md
scripts/: setup_linux_cuda.sh  setup_macos.sh  setup_windows.ps1
src/pedsense/: __init__.py  cli.py  config.py  demo.py
src/pedsense/processing/: __init__.py  annotations.py  dataset_builder.py  frames.py  keypoint_pipeline.py  pose_format.py  resnet_format.py  yolo_format.py
src/pedsense/train/: __init__.py  hybrid_trainer.py  keypoint_trainer.py  resnet_lstm.py  resnet_trainer.py  yolo_trainer.py
tests/: test_annotations.py  test_demo_helpers.py
